# Synthesis-project

./: .gitignore  README.md  attr.keystore  baseConstants.properties  build.gradle  gradle.properties  project.version.toml  releaseApk.json  settings.gradle  sonar-project.properties  versions.gradle
CustomProjectPlugin/: README_JSON.md  build.gradle
acra/: build.gradle
acra/src/main/: AndroidManifest.xml
acra/src/main/res/layout/: activity_main.xml
acra/src/main/res/values/: strings.xml
app/: build.gradle
app/sampledata/: github_user.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: agconnect-services.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_fullscreen.xml  activity_main.xml  activity_uri_scheme.xml  activity_viewpager2.xml  (+4 more)
channel/: walle-channels.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib_base/: build.gradle
module_animation/: build.gradle
module_animation/src/main/: AndroidManifest.xml
module_anko/: build.gradle
module_attrsense/: build.gradle  proguard-rules.pro
module_attrsense/release/: module_attrsense-release.aab
module_attrsense/src/main/: AndroidManifest.xml
module_badge/: build.gradle
module_badge/src/main/: AndroidManifest.xml
module_booster/: build.gradle
module_coli/: build.gradle
module_coli/src/main/: AndroidManifest.xml
module_coli/src/main/assets/: HPImage.json  Movie.json  WanAndroid.json
module_constraintlayout/: build.gradle
module_constraintlayout/src/main/: AndroidManifest.xml
module_core_ktx/: build.gradle
module_core_ktx/src/main/: AndroidManifest.xml
module_cronet/: build.gradle
module_cronet/src/main/: AndroidManifest.xml
module_crop/: build.gradle
module_crop/src/main/: AndroidManifest.xml
module_gesture/: build.gradle
module_gesture/src/main/: AndroidManifest.xml
module_groovy/: AndroidGradle.gradle  DemoPlugin.gradle  MuiltApks.gradle  Tasks.gradle  build.gradle  first_task.gradle  http_task.gradle  project_task.gradle  relationship.gradle  release.xml
module_groovy/src/main/: AndroidManifest.xml
module_groovy/src/main/groovy/: FooGroovy.groovy  GroovyHelper.java  IFoo.java  TestGroovy.groovy
module_java11/: build.gradle
module_java11/src/main/: AndroidManifest.xml
module_java8/: build.gradle
module_java8/src/main/: AndroidManifest.xml
module_jdbc_mysql/: build.gradle
module_jdbc_mysql/src/: db.properties
module_jdbc_mysql/src/main/: AndroidManifest.xml
module_jdbc_mysql/src/main/assets/: app-dev.pem
module_jni/: README.md  build.gradle
module_jni/src/main/cpp/: CMakeLists.txt  jni.cpp
module_jni_json/: build.gradle
module_jni_json/src/main/cpp/: CMakeLists.txt  jnijson.cpp
module_koin/: build.gradle
module_koin/src/main/: AndroidManifest.xml
module_koin/src/main/assets/: koin.properties
module_ktor/: build.gradle
module_leakcanray/: README.md  build.gradle
module_leakcanray/src/main/: AndroidManifest.xml
module_leetcode/: build.gradle
module_litert/: build.gradle
module_litert/src/main/: AndroidManifest.xml
module_material/: build.gradle
module_material/src/main/: AndroidManifest.xml
module_media/: build.gradle
module_media/src/main/: AndroidManifest.xml
module_media2/: build.gradle
module_media2/src/main/: AndroidManifest.xml
module_media3/: build.gradle
module_media3/src/main/: AndroidManifest.xml
module_mediaarouter/: build.gradle
module_mediarouter/: build.gradle
module_mediarouter/src/main/: AndroidManifest.xml
module_mediastore/: .gitignore  build.gradle
module_mediastore/src/main/: AndroidManifest.xml
module_mediastore/src/main/assets/: SecretKey.csv
module_mlkit/: README.md  build.gradle
module_mlkit/src/main/: AndroidManifest.xml
module_nearby/: build.gradle
module_nearby/src/main/: AndroidManifest.xml
module_notification/: build.gradle
module_notification/src/main/: AndroidManifest.xml
module_nsd/: build.gradle
module_nsd/src/main/: AndroidManifest.xml
module_other/: build.gradle
module_other/src/main/: AndroidManifest.xml
module_other/src/main/cpp/: CMakeLists.txt  other.cpp
module_permission/: build.gradle
module_permission/src/main/: AndroidManifest.xml
module_photo/: build.gradle
module_photo/src/main/: AndroidManifest.xml
module_pick/: build.gradle
module_pick/src/main/: AndroidManifest.xml
module_proxy/: build.gradle  proguard-rules.pro
module_proxy/src/main/kotlin/: Main.kt
module_recyclerview/: build.gradle
module_recyclerview/src/main/: AndroidManifest.xml
module_scan/: agconnect-services.json  build.gradle
module_scan/src/main/: AndroidManifest.xml
module_section/: build.gradle
module_section/src/main/: AndroidManifest.xml
module_seismic/: build.gradle
module_seismic/src/main/: AndroidManifest.xml
module_service/: build.gradle
module_service/src/main/: AndroidManifest.xml
module_share/: build.gradle
module_spi/: build.gradle
module_spi/src/main/: AndroidManifest.xml
module_splash_screen/: build.gradle
module_splitties/: build.gradle
module_sqldelight/: build.gradle
module_tensorflow/: build.gradle
module_thread/: build.gradle
module_thread/release/: module_thread-release.aab
module_transition/: build.gradle
module_ucloud/: .gitignore  build.gradle
module_ucloud/src/main/: AndroidManifest.xml
module_versions_catalog/: build.gradle
module_webrtc/: build.gradle
module_webrtc/src/main/: AndroidManifest.xml
module_widget/: build.gradle  proguard-rules.pro
module_widget/src/main/: AndroidManifest.xml
module_widget/src/main/assets/: H5.html
module_wifip2p2/: build.gradle
module_wifip2p2/src/main/: AndroidManifest.xml
modulejar/: build.gradle  proguard-rules.pro
script/: AppConfig.gradle  UploadApk.gradle
tangram/: build.gradle
(+766 files in other folders)
